Added second podcast page

--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -218,7 +218,7 @@
             <iframe
               width="460"
               height="315"
-              src="https://www.youtube.com/embed/Zhk3Obqtyb0?si=gmwvwOj6UdB8myJk"
+              src="https://www.youtube.com/embed/Zhk3Obqtyb0?si=epvWqj6QvVotxHof"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -232,7 +232,7 @@
             <iframe
               width="340"
               height="280"
-              src="https://www.youtube.com/embed/Zhk3Obqtyb0?si=gmwvwOj6UdB8myJk"
+              src="https://www.youtube.com/embed/Zhk3Obqtyb0?si=epvWqj6QvVotxHof"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -241,6 +241,39 @@
             <p>Episode 1 - Lou Brown</p>
           </div>
         </div>
+        <!--* END Episode 1 -------------------------------------------->
+
+        <!--* Episode 2 -------------------------------------------->
+        <div>
+          <!--? Default Screen Size -->
+          <div class="mx-3 mb-5 d-none d-sm-block">
+            <iframe
+              width="460"
+              height="315"
+              src="https://www.youtube.com/embed/GbELnNf7NIs?si=WeRFF9vFoEBrXRjm"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <p>Episode 2 - Kolten Hoffman</p>
+          </div>
+
+          <!--? Phone Screens -->
+          <div class="mx-3 mb-5 d-sm-none">
+            <iframe
+              width="340"
+              height="280"
+              src="https://www.youtube.com/embed/GbELnNf7NIs?si=WeRFF9vFoEBrXRjm"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <p>Episode 2 - Kolten Hoffman</p>
+          </div>
+        </div>
+        <!--* Episode 2 -------------------------------------------->
       </section>
     </main>
 
