--- a/pages/about.html
+++ b/pages/about.html
@@ -693,7 +693,7 @@
 
     <div id="dev-signature-div" class="shadow-lg">
       <p class="">Website Design by:</p>
-      <a class="text-light lead" href="https://joevilasi.com/"
+      <a class="text-light lead" href="https://www.linkedin.com/in/joe-vilasi"
         >Vilasi Web Consulting LLC</a
       >
     </div>
