--- a/pages/nomination.html
+++ b/pages/nomination.html
@@ -270,8 +270,8 @@
             <input
               type="number"
               class="form-control"
-              id="lastName"
-              name="last-name"
+              id="age"
+              name="age"
               min="1"
               max="40"
               required
