Updated nomination application to reflect client requests

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <h1 class="card-header">Nominations Are Open!</h1>
           <div class="card-body">
             <h5 class="card-title mb-3">
-              <u>Under 40 Distinguished Impact Awards</u>
+              <u>Under 40 Distinguished Impact Awards Phase I</u>
             </h5>
             <p class="card-text ch-60">
               Recognizing the achievements of young leaders making significant
