removed nominations page

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <!-------------------------------- SECTION 1 -------------------------------->
 
       <!--? 40 Under 40 Application -->
-      <aside id="fourtyUnderFourty" class="d-flex justify-content-center">
+      <!-- <aside id="fourtyUnderFourty" class="d-flex justify-content-center">
         <div class="card shadow-lg border border-primary">
           <h1 class="card-header">Nominations Are Open!</h1>
           <div class="card-body">
@@ -242,7 +242,7 @@
             >
           </div>
         </div>
-      </aside>
+      </aside> -->
 
       <!--? Work Hard Section -->
       <section class="container-fluid px-0 shadow-lg flexy" id="work-section">
